--- a/templates/store/items/detail.html
+++ b/templates/store/items/detail.html
@@ -4,12 +4,19 @@
 {% block title %} {{ product.name }} {% endblock %}
 
 {% block content %}
-   <div class="product-detail">
-       <img src="{% if product.image %}{{ product.image.url }}{% else %} {% static "img/no_image.png" %}{% endif %}">
-       <h1> {{ product.name }}</h1>
+
+
+   <div class="row">
+    <div class="product-detail card" style="width: 26.5rem; margin-left:30px ;">
+       <img style="margin-left: 10px;"  class="card-img-top" src="{% if product.image %}{{ product.image.url }}{% else %} {% static "img/no_image.png" %}{% endif %}">
+    </div>     
+       <div class="card-body" style="width: 18rem; margin-left:30px">
+       <h1 class="card-title"> {{ product.name }}</h1>
        <h2><a href="{{ product.category.get_absolute_url }}"> {{ product.category }}</a></h2>
-       <p class="price">$ {{ product.price}} </p>
+       <p class="price">₹ {{ product.price}} </p>
        {{ product.description| linebreaks}}
 
-   </div>
+ </div>  
+</div>
+
 {% endblock %}
