--- a/templates/store/items/list.html
+++ b/templates/store/items/list.html
@@ -26,16 +26,16 @@
 <br><br>
      <div class="row">     
 {% for product in products %}
-                <div class="item card col-md-3 col-lg-3 " style="width:18rem; margin:5px" >
+                <div class="item card col-md-3 col-lg-3 " style="width:18rem; margin:5px ">
                     <a href="{{ product.get_absolute_url }}">
-                           <img  class="card-img-top" src="{% if product.image %}{{ product.image.url}}{% else %}{% static "img/no_image.png" %}{% endif %}">
+                           <img class="card-img-top" src="{% if product.image %}{{ product.image.url}}{% else %}{% static "img/no_image.png" %}{% endif %}">
                         </a>
                         <a class="card-title" href="{{ product.get_absolute_url }}"> {{ product.name }}
 
                         </a>
                         <p class="card-text"> {{ product.description }}</p>
                     <br>
-                    ${{ product.price }}
+                    ₹{{ product.price }}
 
                 </div>
             {% endfor %}
