--- a/templates/store/items/detail.html
+++ b/templates/store/items/detail.html
@@ -14,6 +14,11 @@
        <h1 class="card-title"> {{ product.name }}</h1>
        <h2><a href="{{ product.category.get_absolute_url }}"> {{ product.category }}</a></h2>
        <p class="price">₹ {{ product.price}} </p>
+       <form action="{% url 'cart:cart_add' product.id %}" method="post"> 
+       {{ cart_product_form }}
+        {% csrf_token %}
+        <input  class=" btn btn-success "type="submit" value="Add to cart">
+       </form>
        {{ product.description| linebreaks}}
 
  </div>  
