added orders app

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,7 +9,7 @@
         <meta name="Viewport" content="width=device-width , initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-          
+        <link href="{% static 'css/base.css' %}" rel="stylesheet"> 
         <title>
             {% block title %}
               Home
@@ -45,7 +49,18 @@
         </div>
         <div id="subheader" class="container">
             <div class="cart">
-                Your cart is empty
+                {% with total_items=cart|length %}
+                    {% if cart|length > 0 %}
+                    Your cart:
+                    <a href="{% url 'cart:cart_detail' %}">
+                      {{ total_items }} item{{ total_items|pluralize}},
+                       Rs. {{ cart.get_total_price }}
+
+                    </a>
+                    {% else %}
+                    Your cart is empty
+                    {% endif %}
+                {% endwith %}
             </div>
         </div>
         
