--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% load staric %}
+{% load static %}
 
 {% block title %} Your Shopping Cart {% endblock %}
 
 {% block content %}
   <h1> Your shopping cart </h1>
-  <table class="cart"> 
+  <table class="table table-success table-striped"> 
       <thead>
           <tr>
               <th>Image</th>
@@ -25,13 +25,21 @@
         <tr>
             <td>
                 <a href=" {{ product.get_absolute_url }}">
-                    <img src = "{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+                    <img src = "{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}" width="180" height="180">
                 </a>
             </td>
-            <td> {{ prduct.name }}</td>
-            <td> {{ item.quantity }}</td>
-            <td><a href="{% url "cart:cart_remove" product.id %}"</td>
-        </tr>
+            <td> {{ product.name }}</td>
+            <td><form action="{% url 'cart:cart_add' product.id %}" method="post">
+                {{ item.update_quantity_form.quantity }}
+                {{ item.update_quantity_form.update }}
+                
+                <input type="submit" value="Update">
+                {% csrf_token %}
+            </form></td>
+            <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
+            <td class="num">₹{{ item.price }}</td>
+            <td class="num">₹{{ item.total_price}}</td>
+            </tr>
         {% endwith %}
     {% endfor %}
         <tr class="total">
@@ -42,8 +50,8 @@
     </tbody>
 </table>
 <p class="text-right">
-    <a href="{% url "shop:product-list %}" class="button light"> Continue Shopping </a>
-    <a href="#" class="button">Checkout </a>
+    <a href="{% url "products:product_list" %}" class="button light"> Continue Shopping </a>
+    <a href="{% url 'orders:order_create' %}" class="button">Checkout </a>
 </p>
 {% endblock %}
 
